// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cursor should have a "pulsate" class when pulsate is set and block is false 1`] = `
<div
  className="root pulsate"
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
>
   
</div>
`;

exports[`Cursor should not have a "block" class if block is false 1`] = `
<div
  className="root"
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
>
   
</div>
`;

exports[`Cursor should render the provided character inside the cursor when block is true 1`] = `
<div
  className="root block"
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
>
  a
</div>
`;

exports[`Cursor should render with inline styles for positioning 1`] = `
<div
  className="root block"
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
>
   
</div>
`;
